// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#onAutocomplete will correctly format an API response 1`] = `
{
  "autocompletedResults": [
    {
      "acres": {
        "raw": 49057.36,
      },
      "external_id": {
        "raw": "9000",
      },
      "id": {
        "raw": "5beb474f8db2315427beecc7",
      },
      "nps_link": {
        "raw": "https://www.nps.gov/acad/index.htm",
      },
      "states": {
        "raw": [
          "Maine",
        ],
      },
      "title": {
        "raw": "Acadia",
        "snippet": "<em>Acadia</em>",
      },
      "updated_at": {
        "raw": "2018-11-13T21:51:11+00:00",
      },
    },
    {
      "acres": {
        "raw": 49057.36,
      },
      "external_id": {
        "raw": "0",
      },
      "id": {
        "raw": "5beb47b8a1f2532eb09be102",
      },
      "nps_link": {
        "raw": "https://www.nps.gov/acad/index.htm",
      },
      "states": {
        "raw": [
          "Maine",
        ],
      },
      "title": {
        "raw": "Acadia",
        "snippet": "<em>Acadia</em>",
      },
      "updated_at": {
        "raw": "2018-11-13T21:52:56+00:00",
      },
    },
  ],
}
`;

exports[`#onSearch will correctly format an API response 1`] = `
{
  "facets": {
    "states": [
      {
        "data": [
          {
            "count": 2,
            "value": "Maine",
          },
        ],
        "field": "states",
        "type": "value",
      },
    ],
  },
  "rawResponse": {
    "errors": {},
    "info": {
      "national-parks": {
        "current_page": 1,
        "facets": {
          "states": {
            "Maine": 2,
          },
        },
        "num_pages": 1,
        "per_page": 20,
        "query": "acadia",
        "total_result_count": 2,
      },
    },
    "record_count": 2,
    "records": {
      "national-parks": [
        {
          "_explanation": null,
          "_index": "5beb4099c9f929367efa5b7d",
          "_score": 0.7048211,
          "_type": "5beb4099c9f929367efa5b7c",
          "_version": null,
          "acres": 49057.36,
          "external_id": "9000",
          "highlight": {
            "title": "<em>Acadia</em>",
          },
          "id": "5beb474f8db2315427beecc7",
          "nps_link": "https://www.nps.gov/acad/index.htm",
          "sort": null,
          "states": [
            "Maine",
          ],
          "title": "Acadia",
          "updated_at": "2018-11-13T21:51:11+00:00",
        },
        {
          "_explanation": null,
          "_index": "5beb4099c9f929367efa5b7d",
          "_score": 0.7048211,
          "_type": "5beb4099c9f929367efa5b7c",
          "_version": null,
          "acres": 49057.36,
          "external_id": "0",
          "highlight": {
            "title": "<em>Acadia</em>",
          },
          "id": "5beb47b8a1f2532eb09be102",
          "nps_link": "https://www.nps.gov/acad/index.htm",
          "sort": null,
          "states": [
            "Maine",
          ],
          "title": "Acadia",
          "updated_at": "2018-11-13T21:52:56+00:00",
        },
      ],
    },
  },
  "requestId": "",
  "results": [
    {
      "acres": {
        "raw": 49057.36,
      },
      "external_id": {
        "raw": "9000",
      },
      "id": {
        "raw": "5beb474f8db2315427beecc7",
      },
      "nps_link": {
        "raw": "https://www.nps.gov/acad/index.htm",
      },
      "states": {
        "raw": [
          "Maine",
        ],
      },
      "title": {
        "raw": "Acadia",
        "snippet": "<em>Acadia</em>",
      },
      "updated_at": {
        "raw": "2018-11-13T21:51:11+00:00",
      },
    },
    {
      "acres": {
        "raw": 49057.36,
      },
      "external_id": {
        "raw": "0",
      },
      "id": {
        "raw": "5beb47b8a1f2532eb09be102",
      },
      "nps_link": {
        "raw": "https://www.nps.gov/acad/index.htm",
      },
      "states": {
        "raw": [
          "Maine",
        ],
      },
      "title": {
        "raw": "Acadia",
        "snippet": "<em>Acadia</em>",
      },
      "updated_at": {
        "raw": "2018-11-13T21:52:56+00:00",
      },
    },
  ],
  "totalPages": 1,
  "totalResults": 2,
}
`;
